--- a/app/src/main/res/layout/fragment_login_layout.xml
+++ b/app/src/main/res/layout/fragment_login_layout.xml
@@ -20,4 +20,5 @@
         android:backgroundTint="@color/material_white"
         android:textColor="@color/material_indigo600"
         android:text="SIGN UP"/>
+    <include layout="@layout/card_login_layout"/>
 </RelativeLayout>
