--- a/app/src/main/res/layout/fragment_login_layout.xml
+++ b/app/src/main/res/layout/fragment_login_layout.xml
@@ -5,15 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:layout_width="80dip"
-        android:layout_height="80dip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="120dip"
-        android:src="@drawable/icon"/>
+        android:src="@drawable/ic_verified_user_white_48dp"/>
     <Button
         android:id="@+id/signupButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="150dip"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="120dip"
