--- a/app/src/main/res/layout/card_login_layout.xml
+++ b/app/src/main/res/layout/card_login_layout.xml
@@ -36,6 +36,7 @@
 
             </android.support.design.widget.TextInputLayout>
             <Button
+                android:id="@+id/submitButtonId"
                 android:layout_below="@id/passwordTextInputLayoutId"
                 android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
