--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -7,9 +7,10 @@
     tools:context="com.example.davide.kotlinsample.MainActivity">
     <include layout="@layout/card_user_layout"
         android:id="@+id/cardUserLayoutId"/>
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/userBeerRecyclerId"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:layout_below="@id/cardUserLayoutId"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/material_blue900"/>
+        android:layout_height="wrap_content"/>
  </RelativeLayout>
