--- a/app/src/main/res/layout/item_beer.xml
+++ b/app/src/main/res/layout/item_beer.xml
@@ -8,10 +8,9 @@
     android:background="?attr/selectableItemBackground">
     <ImageView
         android:id="@+id/beerIconId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/material_indigo600"
-        android:src="@drawable/ic_verified_user_white_48dp"/>
+        android:layout_width="60dip"
+        android:layout_height="60dip"
+        android:src="@drawable/ic_local_drink_black_48dp"/>
     <TextView
         android:id="@+id/beerTitleId"
         android:paddingLeft="@dimen/activity_horizontal_margin"
