--- a/app/src/main/res/layout/card_login_layout.xml
+++ b/app/src/main/res/layout/card_login_layout.xml
@@ -7,20 +7,20 @@
     android:layout_centerInParent="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.CardView
-        android:visibility="gone"
-        android:layout_alignParentBottom="true"
+    <com.example.davide.kotlinsample.views.ScalingCardView
+        android:layout_centerInParent="true"
         android:id="@+id/cardLoginCardviewLayoutId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <RelativeLayout
+            android:id="@+id/cardLoginContentLayoutId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/activity_horizontal_margin">
 
             <android.support.design.widget.TextInputLayout
-                android:visibility="gone"
                 android:id="@+id/usernameTextInputLayoutId"
+                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
@@ -30,9 +30,9 @@
                     android:hint="Username"/>
             </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
-                android:visibility="gone"
                 android:id="@+id/emailTextInputLayoutId"
                 android:layout_below="@id/usernameTextInputLayoutId"
+                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
@@ -43,9 +43,9 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:visibility="gone"
                 android:id="@+id/passwordTextInputLayoutId"
                 android:layout_below="@id/emailTextInputLayoutId"
+                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
@@ -56,7 +56,6 @@
 
             </android.support.design.widget.TextInputLayout>
             <Button
-                android:visibility="gone"
                 android:id="@+id/submitButtonId"
                 android:layout_below="@id/passwordTextInputLayoutId"
                 android:layout_centerHorizontal="true"
@@ -70,6 +69,6 @@
 
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </com.example.davide.kotlinsample.views.ScalingCardView>
 
 </RelativeLayout>
